@@ -1,6 +1,6 @@
 Package: caret
-Version: 5.15-88
-Date: 2013-04-01
+Version: 5.15-87
+Date: 2013-04-02
 Title: Classification and Regression Training
 Author: Max Kuhn. Contributions from Jed Wing, Steve Weston, Andre
   Williams, Chris Keefer, Allan Engelhardt and Tony Cooper
